ingress/deployment-assignee-ms.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-assignee-ms
spec:
  selector:
    matchLabels:
      app: assignee-ms
  replicas: 6
  template:
    metadata:
      labels:
        app: assignee-ms
    spec:
      containers:
        - name: assignee-ms
          image: cardonadeveloperzabud/assignee-ms:v1
          ports:
            - containerPort: 8081
