ingress/service-mongo-asset.yml
apiVersion: v1
kind: Service
metadata:
  name: service-asset-ms
spec:
  selector:
    app: asset-ms
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
