ingress/ingress-mongo-asset.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-mongo-asset
  anotation:
    nginx.Ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: mongo-asset-service
              servicePort: 27017
